[package]
name = "desktop"
version = "0.0.0"
authors = ["you"]
edition = "2024"
description = "Anarlog Desktop App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyprnote_desktop_lib"
# Note: cdylib removed because V8 (used by deno_core) has TLS relocations incompatible
# with shared libraries on Linux. Mobile support is not needed (macOS/Linux/Windows only).
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["specta", "macos-private-api", "protocol-asset"] }

tauri-plugin-agent = { workspace = true }
tauri-plugin-analytics = { workspace = true }
tauri-plugin-audio-priority = { workspace = true }
tauri-plugin-auth = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-bedrock = { workspace = true }
tauri-plugin-calendar = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-db = { workspace = true }
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-deeplink2 = { workspace = true }
tauri-plugin-detect = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-dictation = { workspace = true }
tauri-plugin-dock = { workspace = true }
tauri-plugin-export = { workspace = true }
tauri-plugin-flag = { workspace = true }
tauri-plugin-fs-sync = { workspace = true }
tauri-plugin-fs2 = { workspace = true }
tauri-plugin-git = { workspace = true }
tauri-plugin-hooks = { workspace = true }
tauri-plugin-http = { workspace = true }
tauri-plugin-icon = { workspace = true }
tauri-plugin-js = { workspace = true }
tauri-plugin-local-llm = { workspace = true }
tauri-plugin-local-stt = { workspace = true }
tauri-plugin-mcp = { workspace = true }
tauri-plugin-messenger = { workspace = true }
tauri-plugin-misc = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-notify = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-opener2 = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-overlay = { workspace = true }
tauri-plugin-path2 = { workspace = true }
tauri-plugin-permissions = { workspace = true }
tauri-plugin-prevent-default = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-relay = { workspace = true }
tauri-plugin-screen = { workspace = true }
tauri-plugin-sentry = { workspace = true }
tauri-plugin-settings = { workspace = true }
tauri-plugin-sfx = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-shortcut = { workspace = true }
tauri-plugin-sidecar2 = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-store = { workspace = true }
tauri-plugin-store2 = { workspace = true }
tauri-plugin-tantivy = { workspace = true }
tauri-plugin-template = { workspace = true }
tauri-plugin-todo = { workspace = true }
tauri-plugin-tracing = { workspace = true }
tauri-plugin-transcription = { workspace = true }
tauri-plugin-tray = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-updater2 = { workspace = true }
tauri-plugin-window-state = { workspace = true }
tauri-plugin-windows = { workspace = true }

hypr-audio-actual = { workspace = true }
hypr-audio-mock = { workspace = true, optional = true }
hypr-db-core = { workspace = true }
hypr-host = { workspace = true }
hypr-storage = { workspace = true }
hypr-supervisor = { workspace = true }

dirs = { workspace = true }
pico-args = { workspace = true }
ractor = { workspace = true }
sentry = { workspace = true, features = ["tracing"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }

[features]
default = []
dev = ["dep:hypr-audio-mock"]
devtools = ["tauri/devtools", "dep:hypr-audio-mock"]
automation = ["tauri-plugin-automation"]
# Vulkan GPU offload for whisper.cpp (covers NVIDIA/AMD/Intel on Windows+Linux).
# Opt-in — building with it requires the Vulkan SDK (headers + glslc) on the
# build machine; default builds stay CPU-only and need no SDK. See
# docs/BUILDING.md "GPU builds (Vulkan)".
gpu-vulkan = ["tauri-plugin-local-stt/vulkan"]

# DirectML GPU offload for Parakeet (ONNX Runtime), Windows-only (covers
# NVIDIA/AMD/Intel through DirectX 12 — no vendor-specific SDK needed at
# build time, unlike `gpu-vulkan`; ONNX Runtime's prebuilt binaries already
# ship DirectML support). Opt-in and independent of `gpu-vulkan` — a Windows
# build wanting GPU offload for *both* engines passes
# `--features gpu-vulkan,directml`. See docs/BUILDING.md "GPU builds
# (Parakeet)".
directml = ["tauri-plugin-local-stt/directml"]

# NVIDIA GPU offload for Parakeet (ONNX Runtime) via CUDA, Windows+Linux.
# Local opt-in only — not wired into CI, which has no CUDA-capable runners.
# (`tauri-plugin-local-stt/cuda` also enables whisper.cpp's own cuda feature;
# see that crate for whisper-specific NVIDIA offload notes.)
cuda = ["tauri-plugin-local-stt/cuda"]

# Compile the whisper.cpp and Parakeet (ONNX) engines on platforms that have
# no Argmax/Soniqo runtime (those are Apple-Silicon-only). CPU inference by
# default; opt into GPU offload with `--features gpu-vulkan` (whisper.cpp) and/or
# `--features directml` or `--features cuda` (Parakeet) — see [features] above.
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
tauri-plugin-local-stt = { workspace = true, features = ["whisper-cpp", "parakeet-onnx"] }
# Toggle hotkey for the dictation orb (the shortcut plugin's non-macOS
# handler drives it; macOS uses its native event-tap path instead).
tauri-plugin-global-shortcut = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-automation = { version = "0.1", optional = true }
hypr-intercept = { workspace = true }
# Legacy Hyprnote-data importer: pulls libsql (own bundled sqlite fork) which
# duplicate-symbol-clashes with sqlx's bundled sqlite under rust-lld on Linux.
# Legacy data can only exist on macOS anyway.
tauri-plugin-importer = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
